// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoanFieldInput renders date field correct 1`] = `
<div>
  <input
    field="[object Object]"
    id="test-id"
    name="test-name"
    type="date"
    value="value"
  />
</div>
`;

exports[`LoanFieldInput renders money field correct 1`] = `
<div>
  <input
    id="test-id"
    name="test-name"
    type="text"
    value="value"
  />
</div>
`;

exports[`LoanFieldInput renders string field correct 1`] = `
<div>
  <input
    id="test-id"
    inputmode="decimal"
    name="test-name"
    type="text"
    value="$NaN"
  />
</div>
`;
